# mail-trash-sorter

./: .cursorrules  .editorconfig  .env.example  .gitignore  LICENSE  README.md  env.example  pyproject.toml
examples/: checkpoint_factory_usage.py  dependency_injection_patterns.py  documentation_styles.py
mailbot/: __init__.py
mailbot/app/: __init__.py  main.py
mailbot/config/: __init__.py  config.py
mailbot/data/: __init__.py  checkpoint_repo.py  checkpoints.db  imap_connector.py  repo_factory.py
mailbot/models/: __init__.py  checkpoint.py
mailbot/tests/: __init__.py
